# menisik

./: .agent.md  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION_FLOW.md  FEATURES.md  PRODUCT_STATUS.md  README.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md  install_task.bat  main.py  pyproject.toml  run.bat  run.py  skill.md
app/: builder.py  contribute.py
artifacts/: vibe-trading-pr60-improvement.patch  vibe-trading-pr60-review.md
data/: pr_engine.sqlite3  pr_log.json
data/.ai_prompts/: claude_prompt.txt
docs/agents/: openclaw.md
openclaw/: README.md
scripts/: _write_service.sh  bootstrap.sh  install_autostart.sh  install_autostart_windows.ps1  install_vps.sh  install_windows.ps1  uninstall_vps.sh  uninstall_windows.ps1
src/: agent_models.py  ai.py  config.py  contribution_engine.py  contribution_store.py  doctor.py  fix_planner.py  fork.py  issue_analyzer.py  notify.py  openclaw_install.py  opportunity_engine.py  patch_generator.py  pr_engine.py  pr_generator.py  pr_writer.py  project_inspector.py  repo_cloner.py  repo_discovery.py  repo_intelligence.py  run_logger.py  scraper.py  security.py  state.py  validator.py
src/contrib/: contribution_store.py  opportunity_engine.py  patch_generator.py  pr_generator.py  validator.py
src/contribution_mcp/: server.py
src/core/: ai.py  cli_ui.py  config.py  (+2 more)
tests/: test_agent_models.py  test_agent_structure.py  test_fork.py  test_install_scripts.py  test_openclaw_install.py  test_pr_decision_engine.py  test_pr_generator_hardening.py  test_state_logging.py
(+19 files in other folders)
