[project]
name = "menisik"
version = "0.2.0"
description = "Learning project: a GitHub contribution engine that drafts narrow patches through quality gates and leaves the submit decision to a human."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "github", "pull-request", "automation", "agent", "contribution"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "mcp[cli]>=1.27.0",
]

[project.scripts]
menisik = "app.contribute:main"
menisik-engine = "app.builder:main"
menisik-mcp = "src.contribution_mcp.server:main"
menisik-daemon = "src.daemon.runner:main"
# The deprecated rover/rover-engine/rover-mcp/rover-daemon aliases were removed
# in 0.2.0 per the deprecation policy (warning-only through 0.1.x).

[project.urls]
Homepage = "https://github.com/itsjawreal/menisik"
Repository = "https://github.com/itsjawreal/menisik"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]
